<resources>
    <string name="app_name" translatable="false">Who\'s Birthday</string>
    <string name="copyright" translatable="false">©2017 &#8211; 2019 GuepardoApps (Jonas Schubert)</string>

    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="addPlus" translatable="false">+</string>
    <string name="back">Back</string>
    <string name="set_bubble_state">Activate floating notification</string>
    <string name="settings">Settings</string>

    <string name="title">Title</string>
    <string name="content">Content</string>

    <string name="prompt">Prompt</string>
    <string name="ok">OK</string>
    <string name="neutral">Neutral</string>
    <string name="cancel">Cancel</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="birthday">Birthday</string>
    <string name="hint_name_birthday">Enter a name</string>
    <string name="hint_group_birthday">Enter a group</string>
    <string name="hint_day_birthday">Enter a day</string>
    <string name="hint_month_birthday">Enter a month</string>
    <string name="hint_year_birthday">Enter a year</string>
    <string name="hint_remind_me_birthday">Remind me about this birthday</string>
    <string name="hint_date_birthday">Select the date</string>

    <string name="example">Example</string>

    <string name="contentDescription">This is an image</string>

    <string name="prompt_birthday_name">Birthday name</string>
    <string name="prompt_birthday_group">Birthday group</string>
    <string name="error_field_required">This field is required</string>

    <string name="about">About</string>
    <string name="author_title">Author</string>
    <string name="author" translatable="false">Jonas Schubert\nGuepardoApps</string>
    <string name="version_title">Version</string>
    <string name="version" translatable="false">2.0.2.190810</string>
    <string name="email_title">Mail</string>
    <string name="email" translatable="false">guepardoapps@gmail.com</string>
    <string name="gitHubLink_title" translatable="false">GitHub</string>
    <string name="gitHubLink" translatable="false">https://github.com/GuepardoApps-Releases/WhosBirthday/</string>
    <string name="homepageLink_title" translatable="false">Homepage</string>
    <string name="homepageLink" translatable="false">https://guepardoapps.github.io/</string>
    <string name="special_thanks_title" translatable="false">Special thanks</string>
    <string name="special_thanks" translatable="false">I want to thank my lovely wife for always supporting me and helping me to improve this application! நான் உன்னை காதலிக்கிறேன்</string>

    <string name="friends">Friends</string>

    <string name="notificationTitle">Who\'s birthday</string>
    <string name="notificationContent">"It is %s' %d birthday!"</string>

    <string name="deleteRequest">Do you want to delete the birthday of %s?</string>
</resources>
