<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:padding="10dp">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthday_NameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <AutoCompleteTextView
                    android:id="@+id/birthday_name_edit_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_birthday_name"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/birthday_edit_datePicker"
                    android:nextFocusRight="@+id/birthday_edit_datePicker"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthday_GroupInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/birthday_NameInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/birthday_group_edit_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_birthday_group"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/birthday_DatePickerButton"
                    android:nextFocusRight="@+id/birthday_DatePickerButton"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthday_DateInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/birthday_GroupInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/birthday_DatePickerEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_date_birthday"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/save_birthday_edit_button"
                    android:nextFocusRight="@+id/save_birthday_edit_button"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.rey.material.widget.Button
                android:id="@+id/save_birthday_edit_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:text="@string/save"
                android:textColor="@color/colorTextIcon"
                android:textStyle="bold"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>