<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_shadow_start_color"
    android:padding="10dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/birthday_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                android:layout_toStartOf="@+id/birthday_item_date"
                android:gravity="center_vertical|start"
                android:text="@string/example"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TextIcon"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birthday_item_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/birthday_item_name"
                android:layout_margin="5dp"
                android:text="@string/example"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/TextIcon" />

            <CheckBox
                android:id="@+id/birthday_remind_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/birthday_item_group"
                android:text="@string/hint_remind_me_birthday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/TextIcon" />

            <TextView
                android:id="@+id/birthday_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:text="@string/example"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TextIcon" />

            <TextView
                android:id="@+id/birthday_item_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/birthday_item_date"
                android:layout_margin="5dp"
                android:text="@string/example"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TextIcon"
                android:textStyle="bold" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/birthday_item_age"
                android:layout_toStartOf="@+id/btnDelete"
                android:contentDescription="@string/contentDescription"
                android:gravity="center_horizontal|center_vertical"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@android:drawable/ic_menu_edit"
                app:fab_radius="17dp"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/birthday_item_age"
                android:contentDescription="@string/contentDescription"
                android:gravity="center_horizontal|center_vertical"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@mipmap/leererpapierkorb"
                app:fab_radius="17dp"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>